# src/modules/user/dto/change-password.dto.ts
@@ -1,0 +1,34 @@
+import { ApiProperty } from "@nestjs/swagger";
+import {
+  IsNotEmpty,
+  IsString,
+  Matches,
+  MaxLength,
+  MinLength,
+} from "class-validator";
+
+export class ChangePasswordDto {
+  @ApiProperty({
+    description: "旧密码",
+    example: "123456",
+  })
+  @IsNotEmpty()
+  @IsString()
+  oldPassword: string;
+
+  @ApiProperty({
+    description: "新密码",
+    example: "123456",
+  })
+  @IsNotEmpty()
+  @IsString()
+  @MinLength(8)
+  @MaxLength(32)
+  @Matches(
+    /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/,
+    {
+      message: "密码至少8位，至少包含大小写字母、数字和特殊字符",
+    },
+  )
+  newPassword: string;
+}
